public class ScientificCalculator {

    public double tan(double num1){

        return Math.tan(num1);
    }

    public double cos(double num1){
        return Math.cos(num1);

    }

    public double sin(double num1){
        return Math.sin(num1);

    }

    public double squareR(double num1){
        return Math. sqrt(num1);

    }


}
