@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class CalculationsClass {
        + addition()
        + division()
        + modulos()
        + multiplication()
        + subtraction()
    }
  }
  

  namespace  {
    class CalculatorGUI {
        + Schoice : int
        + choice : int
        + fOption : int
        + num1 : int
        + num2 : int
        + num3 : int
        + num4 : int
        + type : int
        ~ SchoiceAsString : String
        ~ choiceAsString : String
        ~ fOptioneAsString : String
        ~ num1AsString : String
        ~ num2AsString : String
        ~ num3AsString : String
        ~ num4AsString : String
        ~ typeAsString : String
        + CalculatorGUI()
    }
  }
  

  namespace  {
    class FractionCalculator {
        + dFra()
        + fAdd()
        + fDiv()
        + fMul()
        + fSub()
    }
  }
  

  namespace  {
    class ScientificCalculator {
        + cos()
        + sin()
        + squareR()
        + tan()
    }
  }
  

  namespace  {
    class calculator {
        {static} + main()
    }
  }
  

  namespace  {
    class comboBox2 {
        - button1 : JButton
        - comboBox1 : JComboBox
        - panel1 : JPanel
        + comboBox2()
    }
  }
  

  namespace  {
    class comboBox3 {
        + comboBox3 : JComboBox
        ~ comboBox : JComboBox<String>
        ~ frame : JFrame
        ~ options : String[]
        + comboBox3()
        + getComboBox3()
    }
  }
  

  namespace  {
    class comboBox3.ItemHandler {
        + itemStateChanged()
    }
  }
  

  namespace  {
    class combobox {
        + comboBox1 : JComboBox
        + p1 : JPanel
        + combobox()
        + getComboBox1()
        {static} + main()
    }
  }
  

  CalculatorGUI o-- CalculationsClass : cal
  CalculatorGUI o-- FractionCalculator : fCal
  CalculatorGUI o-- ScientificCalculator : sCal
  comboBox2 -up-|> javax.swing.JFrame
  comboBox3 o-- comboBox3.ItemHandler : handler
  comboBox3 +-down- comboBox3.ItemHandler
  comboBox3.ItemHandler .up.|> java.awt.event.ItemListener
  combobox -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
